added prototype design and stubbed out two components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
-<h1 [textContent]="title"></h1>
-<ul>
-  <li>Benjamin Cortes</li>
-  <li>Benjamin Cortes</li>
-  <li>Benjamin Cortes</li>
-  <li>Benjamin Cortes</li>
-  <li>Benjamin Cortes</li>
-</ul>
+<app-nav></app-nav>
+<app-content></app-content>
