--- a/src/resets.scss
+++ b/src/resets.scss
@@ -1,6 +1,7 @@
+/* resets */
 html, body, div, span,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-img, b, i, ul, li,
+img, b, i, ul, menu, li,
 article, aside, figcaption, figure, 
 footer, header, menu, nav, section,
 audio, video {
@@ -24,12 +25,6 @@ html {
 body{
   font-size:1.6rem;
   overflow-x: hidden;
-  font-family: 'Dosis', sans-serif;
-}
-
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section { 
-  display:block;
 }
 
 nav ul,
