added basic routing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
     top: 0;
     width: 100vw;
     height: 100vh;
-    background-image: url(../../assets/DSC_0011.jpg);
+    background-image: url(./../assets/DSC_0011.jpg);
     animation: scaleIn 3.5s ease-in-out infinite alternate;
 
     .panel {
