--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,8 @@
 <header>
   <menu>
-      <li class="active">ben</li>
-      <li>services</li>
+      <li routerLink="/ben" routerLinkActive="active">ben</li>
+      <li routerLink="/services" routerLinkActive="active">services</li>
+      <!-- <li>services</li> -->
       <li>contact</li>
       <li>photos</li>
   </menu>
