added after route load transition with CSS

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,8 +2,6 @@
   <menu>
       <li routerLink="/ben" routerLinkActive="active">ben</li>
       <li routerLink="/services" routerLinkActive="active">services</li>
-      <!-- <li>services</li> -->
-      <li>contact</li>
-      <li>photos</li>
+      <li routerLink="/contact" routerLinkActive="active">contact</li>
   </menu>
 </header>
