--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,5 +1,5 @@
 <section class="content">
-  <div class="panel">
+  <div class="panel" [ngClass]="{'loaded' : transitionStart}">
       <div class="copy">
           <h1>Services</h1>
           <p>Creating a clear path to communicate with technology can be challenging. As the web matured, so has best practices and this is what I find this fascinating.</p>
