simple media query and hamburger menu added

--- a/src/app/ben/ben.component.html
+++ b/src/app/ben/ben.component.html
@@ -1,4 +1,4 @@
-<section class="content">
+<section class="content" [ngStyle]="{'background-color': globals.randomColor}">
   <div class="panel" [ngClass]="{'loaded' : transitionStart}">
       <div class="copy">
           <h1>Ben</h1>
