--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,6 +34,17 @@
             font-family: 'Quicksand', sans-serif;
             font-size: 1.8rem;
             line-height: 2.6rem;
+
+            @media screen and (max-width: 960px){
+                padding-top: 6rem;
+                width: 100%;
+                left: 0;
+                transition: transform 300ms ease-in;
+
+                &.open{
+                    transform: scale(0.92);
+                }
+            }
         }
 
         .logo{
