--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -3,6 +3,10 @@ header {
     top: -1px;
     z-index: 5;
 
+    @media screen and (max-width: 960px){
+        width: 90%;
+    }
+
     .icon {
         padding: 5px;
         width: 4rem;
@@ -10,16 +14,13 @@ header {
         display: none;
         cursor: pointer;
 
+        &.open{
+            transform: translateY(-100%);
+            transition: transform 250ms ease-in;
+        }
+
         @media screen and (max-width: 960px){
             display: block;
-
-            & + menu {
-                display: none;
-            }
-
-            & + menu.open {
-                display: flex;
-            }
         }
     }
 
@@ -34,10 +35,21 @@ header {
         @media screen and (max-width: 960px){
             justify-content: flex-start;
         }
+
+        @media screen and (max-width: 960px){
+            transform: translateY(-150%);
+            transition: transform 250ms ease-in;
+
+            &.open {
+                position: relative;
+                transform: translateY(0);
+                top: -4rem;
+            }
+        }
     }
 
     li {
-        padding: 2rem 2rem;
+        padding: 2rem;
         margin-left: 1px;
         text-align: center;
         color: white;
@@ -45,23 +57,35 @@ header {
         background-color: black;
         opacity: 0.4;
         transition: all 250ms ease-in;
-    }
 
-    li.active {
-        color: var(--primary-color);
-        background-color: white;
-        /* box-shadow: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color]; */
-        box-shadow: 2px 0 10px 0 rgba(0,0,0,0.45);
-        opacity: 1;
-    }
+        @media screen and (max-width: 960px){
+            display: flex;
+            padding: 0;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+            opacity: 0.9;
+        }
 
-    li:hover{
-        transform: translateY(-1rem);
-        color: black;
-        /* offset-x | offset-y | blur-radius | color */
-        // text-shadow: 1px -1px 4px rgba(255,255,255,.3);
-        opacity: 1;
-        background-color: rgba(255,255,255,0.7);
+        &.active {
+            color: var(--primary-color);
+            background-color: white;
+            /* box-shadow: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color]; */
+            box-shadow: 2px 0 10px 0 rgba(0,0,0,0.45);
+            opacity: 1;
+        }
+
+        @media screen and (min-width: 960px){
+
+            &:hover{
+                transform: translateY(-1rem);
+                color: black;
+                /* offset-x | offset-y | blur-radius | color */
+                // text-shadow: 1px -1px 4px rgba(255,255,255,.3);
+                opacity: 1;
+                background-color: rgba(255,255,255,0.7);
+            }
+        }
     }
 
 }
