--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,6 +1,6 @@
 <section class="content" [ngStyle]="{'background-color': globals.randomColor}">
   <div class="panel" [ngClass]="{'loaded' : transitionStart}">
-      <div class="copy">
+      <div class="copy" [ngClass]="{'open': globals.isOpen}">
           <h1>Services</h1>
           <p>Creating a clear path to communicate with technology can be challenging. As the web matured, so has best practices and this is what I find this fascinating.</p>
           <p>I enjoy creating performant interfaces that feel snappy upon use.</p>
