--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,7 +18,9 @@
         transition: 400ms ease-out;
 
         @media screen and (max-width: 960px){
-            width: 90%;
+            width: 100%;
+            height: 95vh;
+            overflow: scroll;
         }
 
         &.loaded{
