scale text when open

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -42,6 +42,8 @@ header {
 
             &.open {
                 position: relative;
+                display: flex;
+                justify-content: space-around;
                 transform: translateY(0);
                 top: -4rem;
             }
