--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,10 +41,11 @@
                 padding-top: 6rem;
                 width: 100%;
                 left: 0;
-                transition: transform 300ms ease-in;
+                transition: all 250ms ease-in;
 
                 &.open{
-                    transform: scale(0.92);
+                    transform: scale(0.92) translateY(-1rem);
+                    opacity: 0.3;
                 }
             }
         }
