--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,7 +20,7 @@
         @media screen and (max-width: 960px){
             width: 100%;
             height: 95vh;
-            overflow: scroll;
+            overflow-y: scroll;
         }
 
         &.loaded{
@@ -48,6 +48,15 @@
                     opacity: 0.3;
                 }
             }
+
+            .title{
+                position: relative;
+                font-family: 'Quicksand', sans-serif;
+                font-weight: 700;
+                font-size: 3.6rem;
+                margin-bottom: 2rem;
+                border-bottom: 1px solid white;
+            }
         }
 
         .logo{
@@ -56,15 +65,6 @@
             bottom: 2rem;
             left: 17.5%;
             width: 6rem;
-        }
-
-        .copy h1{
-            position: relative;
-            font-family: 'Quicksand', sans-serif;
-            font-weight: 700;
-            font-size: 3.6rem;
-            margin-bottom: 2rem;
-            border-bottom: 1px solid white;
         }
     }
 }
