--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -34,6 +34,7 @@ header {
 
         @media screen and (max-width: 960px){
             justify-content: flex-start;
+            background-color: rgba(0,0,0,.5);
         }
 
         @media screen and (max-width: 960px){
@@ -67,6 +68,7 @@ header {
             justify-content: center;
             align-items: center;
             opacity: 0.9;
+            background-color: transparent;
         }
 
         &.active {
