removed contact from nav, added 404 for testing and tap and close app

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,8 +1,16 @@
 <section class="content" [ngStyle]="{'background-color': 'var(--accent-compliment)'}">
+  <div *ngIf="globals.isOpen" class="close-nav" (click)="toggleNav()"></div>
   <div class="panel" [ngClass]="{'loaded' : transitionStart}">
-      <div class="copy" [ngClass]="{'open': globals.isOpen}">
-        <h1 class="title">Contact</h1>
-          <p>Contact me form will show up here</p>
-      </div>
+    <div class="copy" [ngClass]="{'open': globals.isOpen}">
+      <h1 class="title">Contact the God!</h1>
+
+      <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <input type="text" placeholder="Name" formControlName="name">
+        <input type="text" placeholder="Email" formControlName="email">
+        <textarea placeholder="Message" formControlName="message"></textarea>
+        <button type="submit" [disabled]="form.invalid">Submit</button>
+      </form>
+
+    </div>
   </div>
 </section>
