--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<h1>What ever you are looking for is not here!</h1>
+<section class="content" [ngStyle]="{'background-color': 'var(--accent-compliment)'}">
+    <div *ngIf="globals.isOpen" class="close-nav" (click)="toggleNav()"></div>
+    <div class="panel" [ngClass]="{'loaded' : transitionStart}">
+        <div class="copy" [ngClass]="{'open': globals.isOpen}">
+            <h1>What ever you are looking for is not here!</h1>
+            <p (click)="toggleNav()">Go back to nav</p>
+        </div>
+    </div>
+</section>
