--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,13 @@
     // background-image: url(./../assets/DSC_0011.jpg);
     background-color: rgba(0,0,0, 0.5);
     // animation: scaleIn 3.5s ease-in-out infinite alternate;
+    
+    .close-nav {
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        z-index: 1;
+    }
 
     .panel {
         position: relative;
@@ -20,7 +27,7 @@
         @media screen and (max-width: 960px){
             width: 100%;
             height: 95vh;
-            overflow-y: scroll;
+            overflow-x: auto;
         }
 
         &.loaded{
