--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,6 +11,7 @@
   <menu [ngClass]="{'open': globals.isOpen}">
       <li routerLink="/ben" routerLinkActive="active">ben</li>
       <li routerLink="/services" routerLinkActive="active">services</li>
-      <li routerLink="/contact" routerLinkActive="active">contact</li>
+      <li routerLink="/anything" routerLinkActive="active">404</li>
+      <!-- <li routerLink="/contact" routerLinkActive="active">contact</li> -->
   </menu>
 </header>
