--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,12 @@
     --color-5: rgb(255, 233, 175);
     --color-6: rgb(102, 102, 102);
 
+    --color-1: rgb(35, 15, 43);
+    --color-2: rgb(242, 29, 65);
+    --color-3: rgb(235, 235, 188);
+    --color-4: rgb(188, 227, 197);
+    --color-5: rgb(130, 179, 174);
+
 }
 
 body {
