--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,6 +33,10 @@
             transform: translateY(0vh);
         }
 
+        &.route-changing{
+            transform: translateY(100vh);
+        }
+
         .copy{
             position: relative;
             width: 65%;
