extending page base and using in ben page component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,12 +39,12 @@
     // --color-4: rgb(102, 102, 102);
     // --color-5: rgb(180, 223, 55);
 
-    --color-1: rgb(141, 204, 173);
-    --color-2: rgb(152, 136, 100);
-    --color-3: rgb(254, 166, 162);
-    --color-4: rgb(249, 214, 172);
-    --color-5: rgb(255, 233, 175);
-    --color-6: rgb(102, 102, 102);
+    // --color-1: rgb(141, 204, 173);
+    // --color-2: rgb(152, 136, 100);
+    // --color-3: rgb(254, 166, 162);
+    // --color-4: rgb(249, 214, 172);
+    // --color-5: rgb(255, 233, 175);
+    // --color-6: rgb(102, 102, 102);
 
     --color-1: rgb(35, 15, 43);
     --color-2: rgb(242, 29, 65);
