--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -2,8 +2,10 @@
     <div *ngIf="globals.isOpen" class="close-nav" (click)="toggleNav()"></div>
     <div class="panel" [ngClass]="{'loaded' : transitionStart}">
         <div class="copy" [ngClass]="{'open': globals.isOpen}">
-            <h1>What ever you are looking for is not here!</h1>
-            <p (click)="toggleNav()">Go back to nav</p>
+            <h1 class="title">{{title}}</h1>
+            <p *ngFor="let item of body">
+                {{item}}
+            </p>
         </div>
     </div>
 </section>
