added ngrx store

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -4,12 +4,12 @@
     <div class="copy" [ngClass]="{'open': globals.isOpen}">
       <h1 class="title">Contact the God!</h1>
 
-      <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <!-- <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <input type="text" placeholder="Name" formControlName="name">
         <input type="text" placeholder="Email" formControlName="email">
         <textarea placeholder="Message" formControlName="message"></textarea>
         <button type="submit" [disabled]="form.invalid">Submit</button>
-      </form>
+      </form> -->
 
     </div>
   </div>
