--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,14 +1,14 @@
 <header>
   <div class="icon"
       (click)="toggleMenu()" 
-      [ngClass]="{'open': globals.isOpen}">
+      [ngClass]="{'open': isNavOpen}">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 53 53">
         <g fill="#FFF">
           <path d="M2 13.5h49a2 2 0 0 0 0-4H2a2 2 0 0 0 0 4zM2 28.5h49a2 2 0 0 0 0-4H2a2 2 0 0 0 0 4zM2 43.5h49a2 2 0 0 0 0-4H2a2 2 0 0 0 0 4z"/>
         </g>
       </svg>
   </div>
-  <menu [ngClass]="{'open': globals.isOpen}">
+  <menu [ngClass]="{'open': isNavOpen}">
       <li routerLink="/ben" routerLinkActive="active">ben</li>
       <li routerLink="/services" routerLinkActive="active">services</li>
       <li routerLink="/anything" routerLinkActive="active">404</li>
