--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -7,15 +7,18 @@ header {
     }
 
     .icon {
+        position: inherit;
         padding: 5px;
         width: 4rem;
         height: 4rem;
         display: none;
         cursor: pointer;
+        top: -4rem;
+        transform: translateY(100%);
+        transition: transform 250ms ease-in;
 
         &.open{
             transform: translateY(-100%);
-            transition: transform 250ms ease-in;
         }
 
         @media screen and (max-width: 960px){
