--- a/src/animations.scss
+++ b/src/animations.scss
@@ -5,6 +5,7 @@
     --easeOutQuint: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
 
     --bounceIn: cubic-bezier(.01,1.52,.88,-0.07);
+    --time: 250ms;
 }
 
 @keyframes scaleIn {
