--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -17,11 +17,10 @@
         width: 50%;
         height: 100%;
         color: white;
-        // color: var(--color-2);
         background-color: var(--primary-color);
         box-shadow: 2px 0 10px 10px rgba(0,0,0,0.35);
         transform: translateY(-100vh);
-        transition: 300ms ease-out;
+        transition: transform 300ms ease-out;
 
         @media screen and (max-width: 960px){
             width: 100%;
@@ -31,10 +30,6 @@
 
         &.loaded{
             transform: translateY(0vh);
-        }
-
-        &.route-changing{
-            transform: translateY(-100vh);
         }
 
         .copy{
