--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -29,8 +29,8 @@
         @media screen and (max-width: 960px){
             width: 100%;
             height: 95vh;
-            overflow-x: auto;
-            -webkit-overflow-scrolling: auto;
+            // overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
         }
 
         &.loaded{
@@ -41,18 +41,19 @@
             position: relative;
             width: 80%;
             height: 100%;
-            padding: 10rem 2rem 2rem;
+            padding: 10rem 2rem;
             margin: 0;
             font-family: 'Quicksand', sans-serif;
             font-size: 1.8rem;
             line-height: 2.6rem;
-            -webkit-overflow-scrolling: touch;
+            // -webkit-overflow-scrolling: touch;
 
             p{
                 margin-bottom: 1rem;
 
                 &:last-child{
                     margin-bottom: none;
+                    padding-bottom: 5rem;
                 }
             }
 
