--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -3,7 +3,7 @@
     top: 0;
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(45deg, var(--color-1), var(--color-2));
+    background: linear-gradient(90deg, var(--color-1), black);
 
     .close-nav {
         position: absolute;
