upgraded to Angular 6

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,6 +1,5 @@
 <section
-    class="content"
-    [ngStyle]="{'background-color': 'var(--accent-compliment)'}">
+    class="content">
 
     <div *ngIf="isNavOpen$|async"
         class="close-nav"
