--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -1,5 +1,8 @@
-h1, h2{
-    font-size: 2rem;
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
     color: white;
-    position: relative;
 }
