--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -4,7 +4,6 @@
     width: 100vw;
     height: 100vh;
     background-color: var(--color-2);
-    // background: linear-gradient(90deg, var(--color-1), var(--color-2));
 
     .close-nav {
         position: absolute;
@@ -29,8 +28,7 @@
 
         @media screen and (max-width: 960px){
             width: 100%;
-            height: 95vh;
-            // overflow-x: auto;
+            height: calc(100vh - 1rem);
             -webkit-overflow-scrolling: touch;
         }
 
