--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -36,18 +36,15 @@ header {
         font-weight: 300;
         list-style: none;
 
-        @media screen and (max-width: 960px){
+        @media screen and (max-width: 960px) {
             justify-content: flex-start;
-            background-color: rgba(0,0,0,.5);
-        }
-
-        @media screen and (max-width: 960px){
             position: relative;
             display: flex;
             justify-content: space-around;
             top: -4rem;
             transition: transform var(--time) ease-in;
             transform: translateY(-150%);
+            background-color: rgba(0,0,0,.5);
 
             &.open {
                 transform: translateY(0);
@@ -89,6 +86,7 @@ header {
                 color: black;
                 opacity: 1;
                 background-color: rgba(255,255,255,0.7);
+                cursor: pointer;
             }
         }
     }
