moved functions folder

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,7 @@
 
     --color-1: rgb(35, 15, 43);
     --color-2: rgb(242, 29, 65);
+    // --color-2: #F2C45A;
     --color-3: rgb(235, 235, 188);
     --color-4: rgb(188, 227, 197);
     --color-5: rgb(130, 179, 174);
